--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,24 @@
+* {
+    margin: 0;
+    padding: ;
+    box-sizing: border-box;
+}
+
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%
+    padding: 0 1em;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    border: 3px solid steelblue; 
 } 
+
+h1, h2, h3, p, blockquote{
+    margin-bottom: 12px;
+}
 header h2 {
     font-size: 300%;
     font-style: italic;
